[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
httparse = "1.3"
http = "0.2"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"
threadpool = "1.8"
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.7"
parking_lot = "0.10"
timer = "0.2.0"
chrono = "0.4.19"

[dev-dependencies]
nix = "0.17"
hyper = { version = "0.14.17", features = ["server"] }
reqwest = { version = "0.11.9" }
async-trait = "0.1"
